--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>手游助手配置指南</title>
+    <title>脚本配置指南</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -22,7 +22,7 @@
             overflow-x: hidden;
         }
         
-        .container {
+        。container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 10px;
@@ -467,7 +467,7 @@
                 <div class="step">
                     <div class="step-number">3</div>
                     <h3>设置游戏位置</h3>
-                    <p>将游戏APP放置在手机主页的第一个位置</p>
+                    <p>将游戏APP放置在虚拟机主页的第一个位置</p>
                 </div>
                 
                 <div class="step">
