--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-gamepad"></i> 手游助手配置指南</h1>
+            <h1><i class="fas fa-gamepad"></i> 脚本配置指南</h1>
             <p class="subtitle">按照以下步骤配置环境，畅享游戏乐趣</p>
             
             <!-- 优化后的分辨率信息区域 -->
