--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>双色球号码生成器 - 典雅版</title>
     <style>
-    /* 全局样式重置 */
     * {
-        margin: 0;          /* 移除所有元素的外边距 */
-        padding: 0;         /* 移除所有元素的内边距 */
-        box-sizing: border-box; /* 元素尺寸包含边框和内边距 */
-        font-family: 'Microsoft YaHei', 'Segoe UI', Tahoma, sans-serif; /* 设置默认字体 */
+        margin: 0; 
+        padding: 0;
+        box-sizing: border-box; 
+        font-family: 'Microsoft YaHei', 'Segoe UI', Tahoma, sans-serif; 
     }
     
     /* 页面主体样式 */
