--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     /* 页面主体样式 */
     body {
         background: linear-gradient(135deg, #1a0a2e, #33135c, #1a0a2e); /* 深紫色渐变背景 */
-        min-height: 100vh;   /* 最小高度为视口高度 */
+        min-height: 100vh;   
         display: flex;       /* 启用弹性布局 */
         flex-direction: column; /* 垂直排列子元素 */
         align-items: center;    /* 水平居中 */
