--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>双色球号码生成器 - 典雅版</title>
+    <title>双色球号码生成器</title>
     <style>
     * {
         margin: 0; 
